# mk-docs-template

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: generate_docs.py  index.md
docs/getting_started/: dependencies_used.md  index.md
docs/stylesheets/: extra.css
docs/todos/: groceries.md  house_chores.md  index.md
package_a/: __init__.py
package_a/greetings/: good_evening.py  hello.py
package_b/: cook_pasta.py
